--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
   justify-content: flex-start;
   width: 100%;
   height: 1026px;
-  background-color: purple;
+  background-color: #e5e5e5;
 }
 .menu {
   display: flex;
@@ -63,6 +63,7 @@ body {
 }
 .cards {
   display: flex;
+  overflow-x: scroll;
 }
 .menu {
   margin-left: 11px;
@@ -107,11 +108,32 @@ body {
 }
 /* FOLDER */
 .nav-folder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
   bottom: 0;
   left: 0;
   width: 414px;
   height: 92px;
   opacity: 1;
-  background-color: green;
+  background-color: #ffffff;
+}
+button {
+  text-align: center;
+  font-family: "Roboto";
+  font-size: 20px;
+
+  width: 364px;
+  height: 61px;
+  border-radius: 50px;
+  background-color: #cbcbcb;
+}
+
+.button-text {
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  color: #ffffff;
 }
